# robot-episode-curator

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  connect_quality_metrics.md  dataset-analysis-fixes-handover.md  dataset_analysis_flow.md  plan.md  pyproject.toml  quality_analysis.md  signal_comparison_blockers.md  start.sh  starting_pos_visual.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backend/: cache.py  requirements.txt
backend/adapters/: __init__.py  base.py  lerobot_adapter.py  mcap_adapter.py  multi_subdataset_adapter.py  raw_video_adapter.py  registry.py
backend/analysis/: __init__.py  loader.py  phase_aware.py
backend/analysis/gemini/: __init__.py  client.py  enrich.py  prompts.py  video_cache.py
backend/analysis/gemini/prompts/: cluster_char.yaml  exhaustive_scan.yaml  flag_enrich.yaml
backend/api/: __init__.py  main.py
backend/api/routes/: analysis.py  cache_admin.py  compare.py  datasets.py  downloads.py  edge_frames.py  episodes.py  quality.py  rerun.py  settings.py
backend/downloaders/: __init__.py  base.py  huggingface.py  libero.py  manager.py
backend/loaders/: __init__.py  base.py  hdf5_loader.py  lerobot_loader.py  mcap_utils.py  mp4_generator.py  rlds_loader.py  streaming_extractor.py  webdataset_loader.py
backend/quality/: __init__.py  aggregator.py  divergence.py  diversity.py  temporal.py  visual.py
backend/tests/: __init__.py  conftest.py  pytest.ini  test_analysis_optimizations.py  test_dataset_probe.py  test_streaming_extractor.py
backend/utils/: video_slice.py
exploration/: rerun_fix_test_log.txt
exploration/phase_aware/: FINDINGS.md  compare_gemini_modes.py  cross_dataset_check.py  prototype.py  run_umi_first_10.py  verify_pilot_c.py
exploration/rerun/: FINDINGS.md  TEST_REPORT_2026-04-23.md  TEST_REPORT_final_2026-04-23.md  exp1_single_episode.py  exp2_multi_episode.py  exp3_quality_events.py  exp4_blueprint.py
frontend/: next.config.ts  package-lock.json  package.json  playwright-quality.config.ts  playwright.config.ts
frontend/e2e/: cache-management.spec.ts  dataset-analysis-consistency.spec.ts  dataset-overview.spec.ts  hf-dataset-ingestion.spec.ts  mp4-video-loading.spec.ts  rerun-viewer.spec.ts  signal-performance.spec.ts  user-flows.spec.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/layout/: LeftSidebar.tsx  MainContent.tsx  Modals.tsx  (+1 more)
frontend/src/components/: ActionsChart.tsx  AddDatasetDialog.tsx  ComparePanel.tsx  DataManager.tsx  DatasetAnalysis.tsx  DatasetBrowser.tsx  DatasetQualityDashboard.tsx  EdgeFramesPanel.tsx  EnhancedTimeline.tsx  EpisodeViewer.tsx  FrameCountChart.tsx  HFTokenDialog.tsx  IMUChart.tsx  OnboardingPanel.tsx  PhaseAwarePanel.tsx  QualityPanel.tsx  RerunViewer.tsx  SignalComparisonChart.tsx  SummaryPanel.tsx
frontend/src/hooks/: useApi.ts  useCompare.ts  useDatasetAnalysis.ts  useQuality.ts  useStreamingFrames.ts
frontend/src/types/: analysis.ts  api.ts  compare.ts  quality.ts
frontend/src/utils/: actionClassification.ts
scripts/: dev.sh  setup.sh
tests/: conftest.py
tests/integration/: test_functionality.py  test_streaming_playback.py
